po: Update English translations

--- a/po/en.po
+++ b/po/en.po
@@ -8018,7 +8018,7 @@ msgstr "Media stream has no duration set.\n"
 
 #: dlls/mferror/mferror.mc:473
 msgid "Media format was recognized but is invalid.\n"
-msgstr "Media format was recognized but is invalid.\n"
+msgstr "Media format was recognised but is invalid.\n"
 
 #: dlls/mferror/mferror.mc:480
 msgid "Property wasn't found.\n"
@@ -8520,7 +8520,7 @@ msgstr "Unregistering modules"
 
 #: dlls/msi/msi.rc:140
 msgid "Initializing ODBC directories"
-msgstr "Initializing ODBC directories"
+msgstr "Initialising ODBC directories"
 
 #: dlls/msi/msi.rc:141
 msgid "Starting services"
@@ -9349,7 +9349,7 @@ msgid ""
 "These are the initialization properties for this type of data. To edit a "
 "value, select a property, then choose Edit Value below."
 msgstr ""
-"These are the initialization properties for this type of data. To edit a "
+"These are the initialisation properties for this type of data. To edit a "
 "value, select a property, then choose Edit Value below."
 
 #: dlls/oledb32/version.rc:112
@@ -12532,7 +12532,7 @@ msgstr "Your computer"
 msgid ""
 "This zone contains all Web sites that are on your organization's intranet."
 msgstr ""
-"This zone contains all Web sites that are on your organization's intranet."
+"This zone contains all Web sites that are on your organisation's intranet."
 
 #: dlls/urlmon/urlmon.rc:61
 msgid ""
@@ -12859,7 +12859,7 @@ msgstr "The URL is invalid.\n"
 
 #: dlls/wininet/winineterror.mc:41
 msgid "The URL scheme could not be recognized or is not supported.\n"
-msgstr "The URL scheme could not be recognized or is not supported.\n"
+msgstr "The URL scheme could not be recognised or is not supported.\n"
 
 #: dlls/wininet/winineterror.mc:46
 msgid "The server name could not be resolved.\n"
@@ -13180,7 +13180,7 @@ msgid ""
 "device name is spelled correctly."
 msgstr ""
 "Cannot find the specified device. Make sure it is installed and that the "
-"device name is spelled correctly."
+"device name is spelt correctly."
 
 #: dlls/winmm/winmm.rc:87
 msgid ""
@@ -14305,7 +14305,7 @@ msgid ""
 "ENDLOCAL ends localization of environment changes in a batch file which\n"
 "were introduced by a preceding SETLOCAL.\n"
 msgstr ""
-"ENDLOCAL ends localization of environment changes in a batch file which\n"
+"ENDLOCAL ends localisation of environment changes in a batch file which\n"
 "were introduced by a preceding SETLOCAL.\n"
 
 #: programs/cmd/cmd.rc:268
@@ -16674,7 +16674,7 @@ msgstr "The file '%1' already exists. Do you want to overwrite it?"
 
 #: programs/reg/reg.rc:151
 msgid "reg: Unrecognized escape sequence [\\%1!c!]\n"
-msgstr "reg: Unrecognized escape sequence [\\%1!c!]\n"
+msgstr "reg: Unrecognised escape sequence [\\%1!c!]\n"
 
 #: programs/reg/reg.rc:175
 msgid "reg: Unable to import the registry key '%1'\n"
@@ -17027,7 +17027,7 @@ msgstr ""
 
 #: programs/regedit/regedit.rc:414
 msgid "regedit: Invalid or unrecognized switch [%1]\n"
-msgstr "regedit: Invalid or unrecognized switch [%1]\n"
+msgstr "regedit: Invalid or unrecognised switch [%1]\n"
 
 #: programs/regedit/regedit.rc:415
 msgid "Type \"regedit /?\" for help.\n"
@@ -17071,7 +17071,7 @@ msgstr ""
 
 #: programs/regedit/regedit.rc:424
 msgid "regedit: Unrecognized escape sequence [\\%1!c!]\n"
-msgstr "regedit: Unrecognized escape sequence [\\%1!c!]\n"
+msgstr "regedit: Unrecognised escape sequence [\\%1!c!]\n"
 
 #: programs/regedit/regedit.rc:425
 msgid "regedit: Unsupported registry data type [0x%1!x!]\n"
@@ -17083,7 +17083,7 @@ msgstr "regedit: Unexpected end of line in '%1'.\n"
 
 #: programs/regedit/regedit.rc:427
 msgid "regedit: The line '%1' was not recognized.\n"
-msgstr "regedit: The line '%1' was not recognized.\n"
+msgstr "regedit: The line '%1' was not recognised.\n"
 
 #: programs/regedit/regedit.rc:428
 msgid "regedit: Unable to add the registry value '%1' to '%2'.\n"
@@ -17328,7 +17328,7 @@ msgid ""
 "regsvr32: Invalid or unrecognized switch [%1]\n"
 "\n"
 msgstr ""
-"regsvr32: Invalid or unrecognized switch [%1]\n"
+"regsvr32: Invalid or unrecognised switch [%1]\n"
 "\n"
 
 #: programs/regsvr32/regsvr32.rc:43
@@ -17557,7 +17557,7 @@ msgstr "ERROR: Invalid syntax\n"
 
 #: programs/tasklist/tasklist.rc:37
 msgid "ERROR: The search filter cannot be recognized.\n"
-msgstr "ERROR: The search filter cannot be recognized.\n"
+msgstr "ERROR: The search filter cannot be recognised.\n"
 
 #: programs/taskmgr/taskmgr.rc:37 programs/taskmgr/taskmgr.rc:108
 msgid "&New Task (Run...)"
