--- a/po/en_US.po
+++ b/po/en_US.po
@@ -7970,7 +7970,7 @@ msgstr "Vector property is required.\n"
 
 #: dlls/mferror/mferror.mc:389
 msgid "Operation was cancelled.\n"
-msgstr "Operation was cancelled.\n"
+msgstr "Operation was canceled.\n"
 
 #: dlls/mferror/mferror.mc:396
 msgid "Bytestream is not seekable.\n"
@@ -9169,12 +9169,12 @@ msgstr "offscreen"
 #: dlls/oleacc/oleacc.rc:115
 msgctxt "object state"
 msgid "sizeable"
-msgstr "sizeable"
+msgstr "sizable"
 
 #: dlls/oleacc/oleacc.rc:116
 msgctxt "object state"
 msgid "moveable"
-msgstr "moveable"
+msgstr "movable"
 
 #: dlls/oleacc/oleacc.rc:117
 msgctxt "object state"
@@ -16162,7 +16162,7 @@ msgstr "reg: The operation completed successfully\n"
 
 #: programs/reg/reg.rc:131
 msgid "reg: The registry operation was cancelled\n"
-msgstr "reg: The registry operation was cancelled\n"
+msgstr "reg: The registry operation was canceled\n"
 
 #: programs/reg/reg.rc:174
 msgid "reg: Unable to find the specified registry key\n"
